--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backendadvanced",
   "version": "1.0.0",
   "description": "a basic backend app to deploy",
+  "type":"module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "node",
@@ -16,5 +17,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
