--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backendadvanced",
   "version": "1.0.0",
   "description": "a basic backend app to deploy",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
@@ -19,6 +19,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0"
   }
 }
