--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,10 @@
-PORT=8000
-MONGODB_URI=mongodb+srv://<username>:<your-password>@cluster1.lvdumj9.mongodb.net
-CORS_ORIGIN=*
+PORT=
+MONGODB_URI=
+CORS_ORIGIN=
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRY=
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRY=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
